Fix background for Video Player on Safari mobile (#199)
* Fix background for StandalonePlayer & DetailVideoPlayer on safari mobile
* Current video item UI adjustment on DetailVideoPlayer component

--- a/Pages/Detail/DetailVideo/DetailVideoPlayer/DetailVideoPlayer.razor.css
+++ b/Pages/Detail/DetailVideo/DetailVideoPlayer/DetailVideoPlayer.razor.css
@@ -276,6 +276,7 @@ p {
         display: flex;
         flex-direction: column;
         background-position: center;
+        background-repeat: no-repeat;
         height: 100%;
         padding-top: 8px;
         padding-inline: 16px;
@@ -315,6 +316,10 @@ p {
     
     .related-video-item:hover > .related-thumbnail-area span {
         text-shadow: unset;
+    }
+
+    .current-video-item {
+        transform: scale(1);
     }
 }
 
