--- a/Pages/StandalonePlayer/StandalonePlayer.razor.css
+++ b/Pages/StandalonePlayer/StandalonePlayer.razor.css
@@ -337,6 +337,7 @@ p {
         display: flex;
         flex-direction: column;
         background-position: center;
+        background-repeat: no-repeat;
         height: 100%;
         padding-top: 8px;
         padding-inline: 16px;
